--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV=developement
+NODE_ENV=development
 NODE_VERSION=18.13.0
 DB_URI = "mongodb+srv://hsharma:D2zF8Y3BAVB2UUJW@cluster0.hcshgjb.mongodb.net/shopping-cart?retryWrites=true&w=majority"
 SEESION_SECRET=29FACAE18573A74A423F81BF1E1EA
